[gd_scene load_steps=7 format=2]

[ext_resource path="res://characters/DragonBabyAnimations.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/DragonBaby.gd" type="Script" id=2]
[ext_resource path="res://characters/DragonBabyStates.gd" type="Script" id=3]
[ext_resource path="res://assets/shaders/hit_flash.tres" type="Material" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.5, 9.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19, 11 )

[node name="DragonBaby" type="KinematicBody2D" groups=["hittable"]]
collision_layer = 4
script = ExtResource( 2 )

[node name="DragonBabyStates" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Pivot" type="Node2D" parent="."]

[node name="DragonBabyAnimations" parent="Pivot" instance=ExtResource( 1 )]
material = ExtResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="Pivot"]
position = Vector2( -25, -6 )
enabled = true
cast_to = Vector2( -30, 0 )

[node name="Hitbox" type="Area2D" parent="Pivot"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Hitbox"]
position = Vector2( -4.5, -9.5 )
shape = SubResource( 2 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11 )
shape = SubResource( 1 )

[node name="ChargeWaitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="Pivot/DragonBabyAnimations" to="." method="_on_DragonBabyAnimations_animation_finished"]
[connection signal="body_entered" from="Pivot/Hitbox" to="." method="_on_Hitbox_body_entered"]
